espresso (0.99.48) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Make the intro message a bit less scary, and make it clear that this is
    a beta release.
  * GTK frontend:
    - Set a busy cursor while waiting for debconffiltered subprocesses.
  * Consider ext2, jfs, reiserfs, and xfs partitions for the default root
    partition selection as well as ext3 partitions.
  * Stop treating extended partitions as ext3; this just seems dangerously
    wrong.
  * Make the default partition selection prefer partitions that were just
    created in the advanced partitioner (closes: Malone #37581).
  * Remove NoDisplay=true from .desktop files, now that espresso removes
    itself from the target system.

  [ Jonathan Riddell ]
  * Remove gtk from kbd_chooser
  * KDE Frontend:
    - Make widget layout more consistent

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 13 Apr 2006 18:18:32 +0100

espresso (0.99.47) dapper; urgency=low

  [ Jonathan Riddell ]
  * KDE Frontend:
    - Fix mountpoints page
    - Update mountpoints_to_summary
    - Language page returns the selected language
    - Widgets get translated into selected language
    - Add Kubuntu logo
    - Timezone page labels work

  [ Colin Watson ]
  * When removing packages that don't belong on the installed system, purge
    their configuration too.
  * Remove kernels that aren't appropriate for the current system, using
    base-installer's kernel selection logic. This fixes 32-bit powerpc
    systems, which otherwise would try to boot a 64-bit kernel by default.
  * Rephrase all strings that talk about "Ubuntu" so that Kubuntu, Edubuntu,
    and Xubuntu don't have branding problems. The boot splash image, desktop
    wallpaper, and so on should be enough to indicate what you're
    installing.
  * GTK frontend:
    - Go back to using 'gksudo --desktop %k' rather than sudo in the
      .desktop file, now that it seems to be fixed; this gets us startup
      notification for free.