@@ -5,6 +5,8 @@ espresso (0.99.48) UNRELEASED; urgency=low
     a beta release.
   * GTK frontend:
     - Set a busy cursor while waiting for debconffiltered subprocesses.
+    - If GNOME is installed, reboot properly by telling gdm to reboot and
+      then killing the GNOME session (closes: Malone #38027).
   * Consider ext2, jfs, reiserfs, and xfs partitions for the default root
     partition selection as well as ext3 partitions.
   * Stop treating extended partitions as ext3; this just seems dangerously
